objects/AB4CD__MapMan__c.object
<CustomObject>
    <description>Mapping Manager</description>
    <fields>
        <fullName>AB4CD__GeoField__c</fullName>
        <label>Geo Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB4CD__Label__c</fullName>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB4CD__NameField__c</fullName>
        <label>Name Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB4CD__Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Map Manager</label>
    <listViews>
        <fullName>AB4CD__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>MID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>